update all files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
         body {
             padding-top: 70px;
         }
+        #slides_control {
+            height: 200px;
+        }
+        img{
+            margin:auto;
+            width: 400px;
+        }
+        #slides_control {
+            position:absolute;
+            width: 400px;
+            left:50%;
+            top:20px;
+            margin-left:-200px;
+            }
     </style>
 </head>
 <body>
