--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <title>The Band</title>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">    
-    <base href="/" />
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>  
+    <base href="/" />      
     <style type="text/css">
         body {
             padding-top: 70px;
@@ -38,8 +37,8 @@
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>    
     <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script type="text/javascript" src="bower_components/angular-socialshare/dist/angular-socialshare.js"></script>   
+    <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>    
+    <script type="text/javascript" src="bower_components/font-awesome/css/font-awesome.min.css"></script>  
     <script src="js/app.js"></script>
     <script src="js/controller.js"></script>
     <script src="js/service.js"></script>
