--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>    
     <script type="text/javascript" src="bower_components/font-awesome/css/font-awesome.min.css"></script>
     <script type="text/javascript" src="bower_components/angular-media-player/dist/angular-media-player.min.js"></script>  
+    <script type="text/javascript" src=></script>
     <script src="js/app.js"></script>
     <script src="js/controller.js"></script>
     <script src="js/service.js"></script>
