--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html ng-app="BandApp">
 <head>
     <title>The Band</title>
-    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">    
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">   
     <base href="/" />      
     <style type="text/css">
         body {
@@ -38,7 +39,6 @@
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>    
     <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>    
-    <script type="text/javascript" src="bower_components/font-awesome/css/font-awesome.min.css"></script>
     <script type="text/javascript" src="bower_components/angular-media-player/dist/angular-media-player.min.js"></script>  
     <script type="text/javascript" src=></script>
     <script src="js/app.js"></script>
