--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>    
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>    
-    <script type="text/javascript" src="bower_components/angular-audio/angular-route.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>    
-    <script type="text/javascript" src="bower_components/angular-media-player/dist/angular-media-player.min.js"></script>  
+    <script type="text/javascript" src="bower_components/angular-audio/app/angular.audio.js"></script>
+
     <script type="text/javascript" src=></script>
     <script src="js/app.js"></script>
     <script src="js/controller.js"></script>
