--- a/index.html
+++ b/index.html
@@ -22,26 +22,27 @@
                 <li ng-class="{active:isactive('/about')}"><a href="about">About</a></li>
                 <li ng-class="{active:isactive('/booking')}"><a href="booking">Booking</a></li>
                 <li ng-class="{active:isactive('/contact')}"><a href="contact">Contact</a></li>
-                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="media">Gallery<span class="caret"></span></a>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="media">Gallery<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="music">Music</a></li>
                         <li><a href="videos">Videos</a></li>
                         <li><a href="photos">Photos</a></li>
                     </ul>           
                 </ul>
-        </div>
+            </div>
     </nav>
 
     <div ng-view></div>
 
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>    
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>    
+    <!--<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>-->
+    <script type="text/javascript" src="bower_components/angular/angular.js"></script>    
     <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>    
     <script type="text/javascript" src="bower_components/angular-audio/app/angular.audio.js"></script>
+    <script type="text/javascript" src="bower_components/components-font-awesome/css/font-awesome.min.css"></script>
 
-    <script type="text/javascript" src=></script>
     <script src="js/app.js"></script>
     <script src="js/controller.js"></script>
     <script src="js/service.js"></script>
