--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>    
     <script type="text/javascript" src="bower_components/angular-audio/app/angular.audio.js"></script>
-    <script type="text/javascript" src="bower_components/components-font-awesome/css/font-awesome.min.css"></script>
+    <script type="text/javascript" src="bower_components/components-font-awesome/css/font-awesome.css"></script>
 
     <script src="js/app.js"></script>
     <script src="js/controller.js"></script>
