--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <base href="/" /> 
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">        
-    <style type="text/css">
-        body {
-            padding-top: 70px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/syle.css">
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="navController">
@@ -41,7 +37,7 @@
     <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>    
     <script type="text/javascript" src="bower_components/angular-audio/app/angular.audio.js"></script>
-    <script type="text/javascript" src="bower_components/components-font-awesome/css/font-awesome.css"></script>
+    <!--<script type="text/javascript" src="bower_components/components-font-awesome/css/font-awesome.css"></script>-->
 
     <script src="js/app.js"></script>
     <script src="js/controller.js"></script>
