--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>The Band</title>
     <base href="/" /> 
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">        
-    <link rel="stylesheet" type="text/css" href="css/syle.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="navController">
@@ -30,11 +30,11 @@
 
     <div ng-view></div>
 
+    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>    
+    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>    
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!--<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>-->
-    <script type="text/javascript" src="bower_components/angular/angular.js"></script>    
-    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>    
     <script type="text/javascript" src="bower_components/angular-audio/app/angular.audio.js"></script>
     <!--<script type="text/javascript" src="bower_components/components-font-awesome/css/font-awesome.css"></script>-->
