--- a/index.html
+++ b/index.html
@@ -28,12 +28,15 @@
             </div>
     </nav>
 
-    <div ng-view></div>
-    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>    
-    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>    
+    <div ng-view>
+        
+    </div>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>    
+    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="bower_components/a0-angular-storage/dist/angular-storage.min.js"></script>
+
     
 
     <script src="js/app.js"></script>
