--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html ng-app="bandApp">
+<html>
 <head>
     <title>The Band</title>
     <base href="/" /> 
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/angular-carousel/dist/angular-carousel.css">
 </head>
-<body>
+<body ng-app="bandApp">
     <nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="navController">
         <div class="container">
             <div class="navbar-header">
@@ -31,16 +32,18 @@
     <div ng-view>
         
     </div>
-    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+    
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="bower_components/a0-angular-storage/dist/angular-storage.min.js"></script>
-
+    <script type="text/javascript" src="bower_components/angular-carousel/dist/angular-carousel.js"></script>
+    <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script type="text/javascript" src="bower_components/angular-audio/app/angular.audio.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/controller.js"></script>
-    <script src="js/service.js"></script>
     <script src='js/directive.js'></script>
 </body>
 </html>
